--- a/config.json
+++ b/config.json
@@ -3,5 +3,8 @@
     "languageCode": "en-us",
     "title": "The Foxgang",
     "publishdir": "live",
-    "theme": "thefoxgang"
+    "theme": "thefoxgang",
+    "permalinks": {
+        "blog": "/blog/:year/:month/:slug/"
+    }
 }
