--- a/themes/thefoxgang/theme.toml
+++ b/themes/thefoxgang/theme.toml
@@ -1,21 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/spf13/hugoThemes#themetoml for an example
-
 name = "Thefoxgang"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
-homepage = "http://siteforthistheme.com/"
+licenselink = "https://github.com/tevert/hugo-tevert.github.io/blob/master/themes/thefoxgang/LICENSE.md"
+description = "A custom theme built based on the original styling for thefoxgang.com"
+homepage = "https://www.thefoxgang.com/"
 tags = []
 features = []
-min_version = "0.20"
+min_version = "0.0.1"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Tyler Evert"
+  homepage = "https://www.thefoxgang.com/"
